--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngneat/reactive-forms": "^1.5.1",
     "bootstrap": "^5.0.0-beta1",
     "ngx-auto-unsubscribe": "^3.0.1",
+    "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
